# minian

./: .gitignore  .mise.toml  .pre-commit-config.yaml  .readthedocs.yaml  README.md  cspell.config.yaml  pyproject.toml
.github/workflows/: build.yml  readthedocs.yml  testandcov.yml
docs/source/start_guide/: cli.rst  contribute.rst  index.rst  install.rst  pipeline_config_json.rst
minian/: __init__.py  config.py  constants.py  cross_registration.py  initialization.py  install.py  motion_correction.py  pipeline.py
minian/cnmf/: extras.py  graphs.py  noise_estimation.py  spatial.py
minian/config/: __init__.py  cluster.py  pipeline_config.py  serialize.py
minian/constants/: __init__.py  ffmpeg.py  paths.py
minian/pipelines/: __init__.py  cnmf_process.py  cross_reg.py
minian/test/: README.md  test_config.py  test_cross_reg.py  test_extras_datasets_init_helpers.py  test_minian_rs.py  test_pipeline.py  test_pre_processing.py  test_visualization.py
minian/utilities/: __init__.py  chunking.py  dask_graph.py  datasets.py  logger.py
minian/visualization/: _numeric.py  _viewer_helpers.py  _viz_constants.py  export.py  pipeline_plots.py  viewers_align.py  viewers_cnmf.py  viewers_varray.py
notebooks/: cross-registration.ipynb  pipeline.ipynb  pipeline_test.ipynb  pipeline_viz.ipynb
requirements/: requirements-base.txt  requirements-doc.txt
