[build-system]
requires = ["maturin>=1.13.1,<2"]
build-backend = "maturin"

[project]
name = "minian"
version = "2.0.0"
authors = [
    { name = "MiniAn Developers", email = "denisecailab@gmail.com" },
    { name = "AHurowitz", email = "thicclatka@users.noreply.github.com" },
]
description = "MiniAn is an analysis pipeline and visualization tool inspired by both CaImAn and MIN1PIPE package specifically for Miniscope data."
readme = "README.md"
requires-python = ">=3.12,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "colorcet>=3.2.1",
    "cvxpy>=1.1.11",
    "dask>=2024.8.0",
    "distributed>=2024.8.0",
    "ecos>=2.0.7",
    "ffmpeg-python==0.2.0",
    "jinja2>=3.1.4",
    "logging>=0.4.9.6",
    "lxml-html-clean>=0.4.0",
    "medpy==0.5.2",
    "natsort>=8.4.0",
    "netcdf4>=1.7.4",
    "networkx>=3.3",
    "numba>=0.60.0",
    "numpy>=1.26.4",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.2",
    "pyfftw>=0.13.1",
    # pymetis: no reliable Windows wheels / sdist builds; fallback in minian.cnmf.graphs.
    "pymetis>=2023.1.1; sys_platform != 'win32'",
    "rechunker>=0.5.3",
    "requests>=2.33.1",
    "scikit-image>=0.24.0",
    "scikit-learn>=1.5.1",
    "scipy>=1.4.1",
    "scs>=3.2.11",
    "simpleitk>=2.4.0",
    "sk-video>=1.1.10",
    "sparse>=0.15.4",
    "statsmodels>=0.11.1",
    "tifffile>=2026.4.11",
    "types-requests>=2.33.0.20260408",
    "xarray>=2024.7.0",
    "bokeh>=3.5.1",
    "datashader>=0.16.3",
    "holoviews>=1.19.0",
    "matplotlib>=3.10.9",
    "panel>=1.4.5",
    "zarr>=2.18.7",
    "jupyter>=1.1.1",
    "jupyter-bokeh>=4.0.5",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
docs = [
    "beautifulsoup4>=4.14.3",
    "jinja2>=3.1.4",
    "markupsafe>=2.1.5",
    "m2r2>=0.3.3",
    "nbsphinx>=0.9.6",
    "pydata-sphinx-theme>=0.16.1",
    "sphinx>=8.1.3",
]

[project.urls]
Homepage = "https://github.com/DeniseCaiLab/minian"
Documentation = "https://minian.readthedocs.io/"

[project.scripts]
minian-install = "minian.install:main"
minian-pipeline = "minian.pipelines.cnmf_process:main"
minian-pipeline-defaults = "minian.config:main"
minian-cross-reg = "minian.pipelines.cross_reg:main"

[tool.maturin]
manifest-path = "src-rust/Cargo.toml"
module-name = "minian.minian_rs"
python-source = "."

[tool.commitizen]
name = "cz_conventional_commits"
version = "2.0.0"
tag_format = "v$version"
changelog_incremental = true
version_files = [
    "minian/__init__.py:__version__",
    "pyproject.toml:project.version",
]

[dependency-groups]
dev = [
    "black>=24.0.0",
    "pre-commit>=4.0.0",
    "coverage[toml]>=7.0.0",
    "ipykernel>=7.2.0",
    "maturin>=1.13.1",
    "mypy>=1.14.1",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-rerunfailures>=15.0",
]

[tool.pytest.ini_options]
filterwarnings = [
    # sk-video still imports deprecated scipy.misc (SciPy 2.0).
    "ignore:scipy.misc is deprecated:DeprecationWarning",
    # Binary wheels occasionally disagree on ndarray ABI vs NumPy headers.
    "ignore:numpy.ndarray size changed:RuntimeWarning",
    # SWIG-generated helpers from optional native deps (e.g. SimpleITK).
    "ignore:builtin type SwigPyPacked has no __module__:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__:DeprecationWarning",
]

[tool.mypy]
python_version = "3.12"
packages = ["minian"]
explicit_package_bases = true
pretty = true
show_error_codes = true
warn_unreachable = true
# Many dependencies lack PEP 561 stubs; tighten (or add stubs) gradually.
ignore_missing_imports = true
